--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
 
     <!-- REVISTAS -->
     <h1 class="subTit">Paratexto</h1>
-
     <div style="display: flex; margin: auto; background-color: red; width: 1200px;">
         <div style="position: relative;">
 
@@ -185,8 +184,18 @@
     <!-- RULETA -->
     <h1 class="subTit">Ruleta</h1>
 
-    <div class="ruleta_pregutas">
+    <div>
+        <h5 class="subHeader">AUTOEVALUACIÓN</h5>
+        <p class="subHeader">Actividades</p>
+        <p class="presentacion">
+            Los alumnos harán girar una ruleta virtual y responderán las preguntas elegidas al azar. Participarán con 5 tiros cada uno.
+            Las preguntas serán de comprensión de los textos expositivos leídos.
+            Las preguntas, con opciones, tendrán un valor de 20 puntos cada una. Al finalizar el juego podrá el estudiante consultar el puntaje obtenido.
+        </p>
+        <div style="height: 60px;"></div>
+    </div>
 
+    <div class="ruleta_pregutas">
         <div id="resultado">
             <h1 id="resTotal"></h1>
             <label id="res1"></br></label>
