--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     <!-- PRESENTACIÓN -->
     <div>
-        <h1 class="subTit">Presentación</h1>
-        <p class="presentacion">
+        <h1 class="subTit">PRESENTACIÓN</h1>
+        <p class="presentacion" style="margin-top: 3rem; text-indent: 4rem;">
             La presente página web definida como página electrónica, página digital es un documento o información
             electrónica capaz de contener textos, sonidos, videos, programas, enlaces, imágenes, y que puede ser
             accedida mediante un navegador web.
@@ -52,16 +52,22 @@
             Se proponen actividades diversas y lúdicas con la finalidad de poner en práctica las estrategias de
             comprensión de este tipo de texto.
         </p>
-        <div style="height: 60px;"></div>
-        <p class="bienvenido">¡Bienvenidos!</p>
-        <div style="height: 60px;"></div>
+        <div style="height: 20px;"></div>
+
+        <p style="
+        text-align: center;
+        font-size: 2rem;
+        color: white;
+        ">¡Bienvenidos!</p>
+
+        <div style="height: 20px;"></div>
     </div>
 
 
 
     <!-- TUTORIAL -->
     <div class="pre">
-        <h1 class="subTit">Tutorial</h1>
+        <h1 class="subTit">TUTORIAL</h1>
         <iframe
             src="https://docs.google.com/presentation/d/e/2PACX-1vTFqfTYM8UzS0zUlX_xXNKylhLOiy0mtTZ9ZpX3smIpSrARKgiQrHmm1kyzbJRwCA/embed?start=false&loop=false&delayms=1000"
             frameborder="0" width="800" height="480" allowfullscreen="true">
@@ -69,17 +75,55 @@
     </div>
     <!--  -->
 
-    <!-- REVISTAS -->
-    <h1 class="subTit">Paratexto</h1>
 
-    <p class="presentacion">El paratexto es un elemento que acompaña al texto y contribuye a la comprensión lectora.
-        Estos pueden ser: imágenes, títulos, subtítulos, glosarios etc. Permiten anticipar el tema del texto a través de inferencias.
+
+
+
+
+    <!-- -------------------------------------------------------------------------------------------- -->
+    <!-- PARATEXTO -->
+    <h1 class="subTit">PARATEXTO</h1>
+    <p class="presentacion" style="margin-top: 3rem; text-indent: 4rem;">El paratexto es un elemento que acompaña al
+        texto y contribuye a la comprensión lectora.
+        Estos pueden ser: imágenes, títulos, subtítulos, glosarios etc. Permiten anticipar el tema del texto a través de
+        inferencias.
     </p>
 
+    <p class="subHeader" style="margin-top: 3rem; ">Actividades</p>
+    <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline;">Primer momento:</p>
+    <p class="presentacion" style="text-indent: 4rem;">
+        Se propone la lectura de tres textos expositivos breves que no poseen elementos paratextuales.
+        Los alumnos realizan la lectura de los 3 textos.</br>
+        Texto A: A la carta (título e imagen separados del cuerpo del texto)</br>
+        Texto B: Cielos despejados (título, imagen y definición separados del texto)</br>
+        Texto C: Al límite (título, imagen separados del texto)
+    </p>
+    <ol class="presentacion" type="a" style="margin-top: 1rem;">
+        <li>Lee con atención los textos.</li>
+        <li>Observa los elementos que están sueltos y que pertenecen a los textos leídos. Coloca cada elemento con el
+            texto correspondiente.
+            (Lo podrán hacer deslizando el dedo por la pantalla para ubicar los elementos o con el mouse de la
+            computadora)</li>
+    </ol>
 
 
+    <div style="height: 3rem;"></div>
 
-    <div style="display: flex; margin: auto; background-color: red; width: 1200px;">
+
+    <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline;">Segundo momento:</p>
+    <p class="presentacion" style="text-indent: 4rem;">Los alumnos responden a la siguiente pregunta y registran sus
+        respuestas:</p>
+    <ol class="presentacion" type="a" style="margin-top: 1rem;">
+        <li>¿Qué función cumplen los títulos, subtítulos, imágenes, palabras destacadas, glosario en el texto
+            expositivo?</li>
+    </ol>
+
+
+    <div style="height: 5rem;"></div>
+
+
+    <div style="display: flex; margin: auto; width: 1200px;">
+        <!-- background-color: red -->
         <div style="position: relative;">
 
             <img src="img/hoja1.jpg" alt="" width="600px">
@@ -157,8 +201,9 @@
 
     </div>
 
+
     <div class="container" style="background-color: #272727;">
-        <h2 style="text-align: center; color: white; background-color: #3967b1;">Recortes</h2>
+        <h1 style="text-align: center; color: white; background-color: #d83636;">Recortes</h1>
         <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
         <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
         <img src="img/recorte07.png" alt="" class="draggable" draggable="true">
@@ -168,19 +213,100 @@
         <img src="img/recorte04.jpg" alt="" class="draggable" draggable="true">
         <img src="img/recorte06.jpg" alt="" class="draggable" draggable="true">
     </div>
+
     <!--  -->
 
 
+    <!-- --------------------------------------------------------------------------------------------------- -->
+    <h1 class="subTit">ORGANIZACIÓN DE LOS TEXTOS EXPOSITIVOS</h1>
 
+    <p class="presentacion" style="text-indent: 4rem;">
+        El texto expositivo se estructura de acuerdo a diferentes modos de organización. Ellos son:
+    </p>
 
+    <ul class="presentacion" style="margin-top: 2rem;">
+        <li>Descriptiva: Los elementos son agrupados en torno a una determinada entidad, en tanto rasgos, atributos o
+            características de ella.
+        </li>
+        <li>Seriación: los datos pueden ser agrupados en una secuencia temporal.</li>
+        <li>Causal: incluye vínculos causales entre elementos antecedente- consecuente.</li>
+        <li>Problema- solución: está relacionado con la estructura causal pero más organizada, relación temporal y un
+            vínculo causal entre problema y solución.</li>
+        <li>Comparación: el texto se organiza en torno a la confrontación de dos entidades o fenómenos para establecer
+            semejanzas y diferencias.</li>
+    </ul>
 
+    <p class="subHeader" style="margin-top: 3rem; ">Actividades</p>
+    <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline;">Primer momento:</p>
+    <p class="presentacion" style="text-indent: 4rem;">
+        Los estudiantes realizan la lectura de los siguientes textos</br>
+        Texto A: La ballena.</br>
+        Texto B: La caza de ballenas en el tiempo.</br>
+        Texto C: Iguales pero diferentes.
+    </p>
+    <ol class="presentacion" type="a" style="margin-top: 1rem;">
+        <li>Lee con atención los textos propuestos.</li>
+    </ol>
 
-
-    
+    <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline;">Segundo momento:</p>
+    <p class="presentacion" style="text-indent: 4rem;">Responden las siguientes preguntas</p>
+    <ol class="presentacion" type="a" style="margin-top: 1rem;">
+        <li>¿Cuál es la temática que abordan los textos?</li>
+        <li>¿Cómo presenta y desarrolla el autor cada tema?</li>
+        <li>¿Observando las plantillas (interactivas) propuestas ¿a cuál correspondería cada texto leído?
+            Complétalas con la información de los textos.</li>
+    </ol>
+    <div>
+        <input type="text">
+        <input type="text">
+        <input type="text">
+    </div>
 
     <!-- ROMPECABEZAS -->
     <div class="r1">
-        <h1 class="subTit">Rompecabezas (Parte 1)</h1>
+        <h1 class="subTit">ESTRATEGIAS DEL TEXTO EXPOSITIVO</h1>
+
+        <p class="presentacion" style="margin-top: 3rem; text-indent: 4rem;">
+            Estrategias discursivas: uso de formas de impersonalidad, tiempos verbales del indicativo, progresión
+            temática.
+            Estrategias explicativas: definición, ejemplificación, comparación, reformulación.
+            Paratexto: elemento que acompaña al texto y contribuye a la comprensión lectora (imágenes, títulos,
+            subtítulos, glosarios etc. )
+        </p>
+
+        <p class="subHeader" style="margin-top: 3rem; ">Actividades</p>
+
+        <p class="presentacion" style="text-indent: 4rem;">
+            Presentación de un juego que consiste en el armado de un rompecabezas virtual e interactivo. Se solicita a
+            los alumnos seguir las siguientes instrucciones:
+        </p>
+
+        <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem">Primer
+            momento:</p>
+        <ol class="presentacion" type="a" style="margin-top: 1rem;">
+            <li>Observa el texto fraccionado.</li>
+            <li>Lee con atención cada parte.</li>
+            <li>¿Serás capaz de armar el rompecabezas en el menor tiempo posible?</li>
+        </ol>
+
+        <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem">Segundo
+            momento:</p>
+        <ol start="4" class="presentacion" type="a" style="margin-top: 1rem;">
+            <li>¿Qué pistas o indicios ayudaron al armado? Marcar los elementos que relacionan los párrafos y hacen
+                avanzar la información.</li>
+            <li>Selecciona en el texto: ejemplos, definiciones, comparaciones, reformulaciones que encuentres.</li>
+        </ol>
+
+        <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem">Tercer
+            momento:</p>
+        <ol start="6" class="presentacion" type="a" style="margin-top: 1rem;">
+            <li>¿Qué dificultades tuviste?</li>
+            <li>Al final de la actividad ingresa a este <a
+                    href="https://historia.nationalgeographic.com.es/a/cocodrilos-antiguo-egipto-temidos-y-venerados_12991"
+                    style="color: white;">vínculo</a>.</li>
+        </ol>
+
+        <p class="subHeader" style="margin-top: 3rem; ">Rompecabezas 1/2</p>
         <iframe style="width: 90%; height: 1500px; border-style: solid; border-width: 2px; border-color: #888"
             allowFullScreen="true"
             src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL2hlbGVuYXBjL3J1bGV0YS9tYXN0ZXIvaW1nL3I0LmpwZw~~&nop=9&color=charcoal"
@@ -188,7 +314,7 @@
     </div>
 
     <div class="r2">
-        <h1 class="subTit">Rompecabezas (Parte 2)</h1>
+        <p class="subHeader" style="margin-top: 3rem; ">Rompecabezas 2/2</p>
         <iframe style="width: 90%; height: 1500px; border-style: solid; border-width: 2px; border-color: #888"
             allowFullScreen="true"
             src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL2hlbGVuYXBjL3J1bGV0YS9tYXN0ZXIvaW1nL3IzLmpwZw~~&nop=9&color=charcoal"
@@ -199,10 +325,8 @@
 
 
     <!-- RULETA -->
-    <h1 class="subTit">Ruleta</h1>
-
+    <h1 class="subTit">AUTOEVALUACIÓN</h1>
     <div>
-        <h5 class="subHeader">AUTOEVALUACIÓN</h5>
         <p class="subHeader">Actividades</p>
         <ul style="margin-top: 1rem" class="presentacion">
             <li>Los alumnos harán girar una ruleta virtual y responderán las preguntas elegidas al azar.</li>
@@ -210,11 +334,11 @@
             <li>Las preguntas serán de comprensión de los textos expositivos leídos.</li>
             <li>Las preguntas, con opciones, tendrán un valor de 20 puntos cada una.</li>
         </ul>
-        
-        <p style="margin-top: 2rem" class="presentacion">Al finalizar el juego podrá el estudiante consultar el puntaje obtenido.</p>
+
+        <p style="margin-top: 2rem" class="presentacion">Al finalizar el juego podrá el estudiante consultar el puntaje
+            obtenido.</p>
         <div style="height: 60px;"></div>
     </div>
-
 
     <!-- JUEGO -->
     <div class="ruleta_pregutas">
