--- a/index.html
+++ b/index.html
@@ -256,11 +256,12 @@
         <li>¿Observando las plantillas (interactivas) propuestas ¿a cuál correspondería cada texto leído?
             Complétalas con la información de los textos.</li>
     </ol>
-    <div>
+
+    <!-- <div>
         <input type="text">
         <input type="text">
         <input type="text">
-    </div>
+    </div> -->
 
     <!-- ROMPECABEZAS -->
     <div class="r1">
