--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ruleta.css">
+    <link rel="stylesheet" href="css/cuadros.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <script src="TweenMax.min.js"></script>
@@ -257,11 +258,80 @@
             Complétalas con la información de los textos.</li>
     </ol>
 
-    <!-- <div>
-        <input type="text">
-        <input type="text">
-        <input type="text">
-    </div> -->
+    <div style="position: relative;">
+        <img src="img/cuadros.svg" alt="" style="display: block; margin: auto;">
+
+        <!-- inputs -->
+        <input type="text" class="cuadroInput" style="top:30px;">
+        <input type="text" class="cuadroInput" style="top:55px;">
+        <input type="text" class="cuadroInput" style="top:80px;">
+        <input type="text" class="cuadroInput" style="top:105px;">
+        <input type="text" class="cuadroInput" style="top:130px;">
+        <input type="text" class="cuadroInput" style="top:155px;">
+        <input type="text" class="cuadroInput" style="top:180px;">
+
+        <input type="text" class="cuadroInput" style="top:220px;">
+        <input type="text" class="cuadroInput" style="top:245px;">
+
+
+        <!-- BOX -->
+        <textarea cols="15" rows="4" class="cuadroBox" style="left: 227px; top:146px;"></textarea>
+        <textarea cols="15" rows="4" class="cuadroBox" style="left: 500px; top:82px;"></textarea>
+        <textarea cols="15" rows="4" class="cuadroBox" style="left: 500px; top:212px;"></textarea>
+
+
+        <!-- BOX 2 -->
+        <textarea cols="15" rows="4" class="cuadroBox" style="left: 223px; top:432px;"></textarea>
+        <textarea cols="15" rows="4" class="cuadroBox" style="left: 430px; top:432px;"></textarea>
+        <textarea cols="15" rows="4" class="cuadroBox" style="left: 637px; top:432px;"></textarea>
+        <textarea cols="15" rows="4" class="cuadroBox" style="left: 844px; top:432px;"></textarea>
+
+        <!-- BOX 3 -->
+        <table style="position: absolute; left: 345px; top: 650px;">
+            <tr>
+                <td class="cuadroTabla">Categorías</td>
+                <td class="cuadroTabla">Elemento A</td>
+                <td class="cuadroTabla">Elemento B</td>
+            </tr>
+            <tr>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+            </tr>
+            <tr>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+            </tr>
+            <tr>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+            </tr>
+            <tr>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+                <td><textarea class="cuadroTabla" rows="5"></textarea></td>
+            </tr>
+        </table>
+
+        <!-- <textarea cols="18" rows="5" class="cuadroBox" style="left: 362px; top:646px;"></textarea>
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 362px; top:736px;"></textarea>
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 362px; top:826px;"></textarea>
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 362px; top:916px;"></textarea>
+
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 523px; top:646px;"></textarea>
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 523px; top:736px;"></textarea>
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 523px; top:826px;"></textarea>
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 523px; top:916px;"></textarea>
+
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 684px; top:646px;"></textarea>
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 684px; top:736px;"></textarea>
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 684px; top:826px;"></textarea>
+        <textarea cols="18" rows="5" class="cuadroBox" style="left: 684px; top:916px;"></textarea> -->
+
+
+    </div>
 
     <!-- ROMPECABEZAS -->
     <div class="r1">
