--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
 
         <!-- BOX 3 -->
         <table style="position: absolute; left: 345px; top: 650px;">
-            <tr>
-                <td class="cuadroTabla">Categorías</td>
+            <tr  >
+                <td style="padding: 0.5rem;" class="cuadroTabla">Categorías</td>
                 <td class="cuadroTabla">Elemento A</td>
                 <td class="cuadroTabla">Elemento B</td>
             </tr>
