--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     </ul>
 
     <p class="subHeader" style="margin-top: 3rem; ">Actividades</p>
-    <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline;">Primer momento:</p>
+    <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem;">Primer momento:</p>
     <p class="presentacion" style="text-indent: 4rem;">
         Los estudiantes realizan la lectura de los siguientes textos</br>
         Texto A: La ballena.</br>
@@ -251,7 +251,7 @@
         <li>Lee con atención los textos propuestos.</li>
     </ol>
 
-    <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline;">Segundo momento:</p>
+    <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem;">Segundo momento:</p>
     <p class="presentacion" style="text-indent: 4rem;">Responden las siguientes preguntas</p>
     <ol class="presentacion" type="a" style="margin-top: 1rem;">
         <li>¿Cuál es la temática que abordan los textos?</li>
