--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <!-- TITULO -->
     <div style="position: relative;">
-        <img src="img/unsa.jpg" alt="" style="position: absolute; left: 0px; top:-80px; transform: scale(0.4);">
-        <img src="img/didactica.png" alt="" style="position: absolute; right: 0px; top:-2px; transform: scale(0.5);">
+        <img src="img/unsa.jpg" alt="" style="position: absolute; left: 0px; top:-23px; transform: scale(0.8); display: block;">
+        <img src="img/didactica.png" alt="" style="position: absolute; right: 20px; top: 20%; transform: scale(1); display: block;">
         <h1 style="
             margin: 0;
             background-color: rgb(98, 93, 112);
@@ -30,7 +30,7 @@
             vertical-align: center;
             font-size: 100px;
             ">
-            Texto expositivo
+            Texto</br>expositivo
         </h1>
     </div>
     <!--  -->
@@ -126,86 +126,27 @@
 
 
     <div style="display: flex; margin: auto; width: 1200px;">
-        <!-- background-color: red -->
+
         <div style="position: relative;">
-
             <img src="img/hoja1.jpg" alt="" width="600px">
-
-            <div class="container" style="
-            position: absolute;
-            left: 42px;
-            top: 58px;
-            width: 265px;
-            height: 95px;
-            "></div>
-
-            <div class="container" style="
-            position: absolute;
-            left: 313px;
-            top: 50px;
-            width: 284px;
-            height: 205px;
-            "></div>
-
-            <div class="container" style="
-            position: absolute;
-            left: 46px;
-            top: 361px;
-            width: 375px;
-            height: 99px;
-            "></div>
-
-            <div class="container" style="
-            position: absolute;
-            left: 324px;
-            top: 468px;
-            width: 239px;
-            height: 117px;
-            "></div>
-
-            <div class="container" style="
-            position: absolute;
-            left: 49px;
-            top: 575px;
-            width: 264px;
-            height: 182px;
-            "></div>
-
+            <div class="container" style="left: 42px; top: 58px; width: 265px; height: 95px;"></div>
+            <div class="container" style="left: 313px; top: 50px; width: 284px; height: 205px;"></div>
+            <div class="container" style="left: 46px; top: 361px; width: 375px; height: 99px;"></div>
+            <div class="container" style="left: 324px; top: 468px; width: 239px; height: 117px;"></div>
+            <div class="container" style="left: 49px; top: 575px; width: 264px; height: 182px;"></div>
         </div>
 
         <div style="position: relative;">
             <img src="img/hoja2.jpg" alt="" width="600px">
-
-            <div class="container" style="
-            position: absolute;
-            left: 29px;
-            top: 54px;
-            width: 286px;
-            height: 113px;
-            "></div>
-
-            <div class="container" style="
-            position: absolute;
-            left: 160px;
-            top: 62px;
-            width: 436px;
-            height: 248px;
-            "></div>
-
-            <div class="container" style="
-            position: absolute;
-            left:301px;
-            top: 294px;
-            width: 254px;
-            height: 189px;
-            "></div>
-
+            <div class="container" style="left: 29px; top: 54px; width: 286px; height: 113px;"></div>
+            <div class="container" style="left: 160px; top: 62px; width: 436px; height: 248px;"></div>
+            <div class="container" style="left:301px; top: 294px; width: 254px; height: 189px;"></div>
         </div>
 
     </div>
 
 
-    <div class="container" style="background-color: #272727;">
+    <div style="background-color: #272727; position: relative;">
         <h1 style="text-align: center; color: white; background-color: #d83636;">Elementos</h1>
         <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
         <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
@@ -267,7 +208,6 @@
 
         <!-- inputs -->
         <div style="position: absolute; left: 50%; top: 0px;">
-            <!-- <div style="transform: translateX(-50%);"> -->
 
             <input type="text" class="cuadroInput" style="top:30px;">
             <input type="text" class="cuadroInput" style="top:55px;">
@@ -311,11 +251,12 @@
             <tr style="transform: translateX(-50%);">
 
                 <td>
-                    <svg style="position: absolute; top:0px;" height="81" width="171">
+                    <!-- <svg style="position: absolute; top:0px;" height="81" width="171">
                         <line x1="0" y1="0" x2="400" y2="200" style="stroke:#41719c ;stroke-width:2" />
-                    </svg>
-                    <textarea disabled class="cuadroTabla" rows="5">
-
+                    </svg> -->
+                    <textarea disabled class="cuadroTabla" rows="5"
+                    style="
+                    background: linear-gradient(29deg, #6596c8 50%, #41719c 51%, #6596c8 52%);">
                     </textarea>
                 </td>
                 <td><textarea class="cuadroTabla" rows="5"></textarea></td>
